# zerolan-core

./: config.template.yaml  starter.py  test-stream.py
asr/qwen3_asr_transformers/: README.md  config.py  model.py  pyproject.toml  requirements.txt
asr/qwen3_asr_vllm/: README.md  config.py  model.py  pyproject.toml  requirements.txt
tts/Qwen3-TTS/: README.md  README_zh-CN.md  qwen3_tts_api.py
